--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch"
+    
   },
   "dependencies": {
     "next": "15.2.4",
@@ -29,6 +30,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.0",
     "node-mocks-http": "^1.16.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
